k8s/base/ingress/ingress-class.yaml
# Nginx Ingress Setup
# Default cluster traffic handler
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"  # Set as default
spec:
  controller: k8s.io/ingress-nginx  # Standard handler
